# ArvoreAVLeRN

./: .gitignore  CMakeLists.txt  funcoesBasicas.c  funcoesBasicas.h  main.c
arvores/: avl.c  avl.h  rubroNegra.c  rubroNegra.h
txts/: pesquisa1000.txt  pesquisa10000.txt  pesquisa100000.txt  pesquisa1000000.txt  resultado.txt
